feature: in progress putting JWT on Auth service
